--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+body {
+    background: #0f0f10;
+    color: #fff;
+  }
+  
+input,
+textarea {
+    color: #000;
+  }
