--- a/frontend/src/pages/Auth/Navigation.css
+++ b/frontend/src/pages/Auth/Navigation.css
@@ -1,6 +1,6 @@
-body{
+/* body{
   background-color: #1b1b1b;
-}
+} */
 #navigation-container {
     width: 4%;
     transition: width 0.3s ease-in-out;
